@@ -1,6 +1,7 @@
 == 0.9.6 / ???
 
 * Reject attempts to insert into stdio via <+ (#288)
+* Support Comparable for Bud::Lattice values
 * Improve MRI 1.8 compatibility
 * Require ruby_parser >= 3.1.0
 
